--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Conpeto</string>
     <string name="action_settings">Settings</string>
+    <string name="facebook_app_id">477026109483594</string>
+    <string name="fb_login_protocol_scheme">fb477026109483594</string>
 </resources>
