--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,10 @@
     <string name="group_name">Group Name</string>
     <string name="cancel">Cancel</string>
     <string name="create_your_group">Create your group</string>
+    <string name="title_activity_view_group">ViewGroup</string>
+    <string name="go_back">Go back</string>
+    <string name="below_is_a_list_of_groups_joined">below_is_a_list_of_groups_joined</string>
+    <string name="title_activity_join_group">JoinGroup</string>
+    <string name="enter_the_name_of_group_you_want_to_join">Enter the name of group you want to join</string>
+    <string name="search_for_and_join_a_group">Search for and join a group</string>
 </resources>
