--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,7 @@
     <string name="title_activity_show_group_info">ShowGroupInfo</string>
     <string name="notify_me_when_groups_within_this_range_are_created">Notify me when groups within this range are created</string>
     <string name="log_out">Log Out</string>
+    <string name="delete_group">DELETE GROUP</string>
+    <string name="title_activity_create_same_group">CreateSameGroup</string>
+    <string name="default_notification_channel_id">default</string>
 </resources>
